--- a/blogs-client/src/index.css
+++ b/blogs-client/src/index.css
@@ -1,1 +1,14 @@
 
+body {
+    margin: 0;
+    font-family: "Poppins", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+.blog__title {
+    background-color: rgba(255, 0, 255, 0.144);
+    text-transform: uppercase;
+    text-shadow: #15ff00e8 1px 0 10px;
+    text-align: center;
+  }
