--- a/blogs-client/src/index.css
+++ b/blogs-client/src/index.css
@@ -12,3 +12,15 @@ body {
     text-shadow: #15ff00e8 1px 0 10px;
     text-align: center;
   }
+
+  .post__wrapper {
+    border-radius: 26px;
+    background: #e0e0e0;
+    border-radius: 10px 10px 15px 15px;
+    background: #86285f5e;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+      rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    margin: 20px 0px 0px 0px;
+    padding-bottom: 30px;
+  }
+  
